--- a/sources.html
+++ b/sources.html
@@ -97,30 +97,14 @@
       <h2>Plan of Work</h2>
       <ul class="source-list">
         <li>
-          <a href="" target="_blank"></a>
+          <img src="images/Screenshot 2024-11-15 124204.png" alt="Work Log">
         </li>
       </ul>
 
       <h2>Copyright Checklist</h2>
       <ul class="source-list">
         <li>
-          <a href="" target="_blank"
-            ></a
-          >
-        </li>
-        <li>
-          <a
-            href=""
-            target="_blank"
-            ></a
-          >
-        </li>
-        <li>
-          <a
-            href=""
-            target="_blank"
-            ></a
-          >
+          <img src="images/CopyrightChecklist-+Signed.png" alt="Copyright" style="max-width: 500px;">
         </li>
       </ul>
     </div>
