--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://cdn-icons-png.flaticon.com/512/5077/5077571.png"
       type="image/x-icon"
     />
-    <title>Webpage Title</title>
+    <title>Green Table - Home</title>
   </head>
   <body>
     <nav class="navbar">
