--- a/sustainability.html
+++ b/sustainability.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Green Table - Sustainability</title>
     <link rel="stylesheet" href="css/sustainability.css" />
+    <link
+      rel="shortcut icon"
+      href="https://cdn-icons-png.flaticon.com/512/5077/5077571.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <!-- Navbar -->
