--- a/index.html
+++ b/index.html
@@ -3,48 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Green Table</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="shortcut icon" href="https://www.svgrepo.com/show/449384/leaf.svg" type="image/x-icon">
+    <title>The Greenery - Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <style>
+        #hero-background 
+        {
+            position: relative;
+            background: url('https://www.oliocarli.us/-/media/ita/hub_editoriale/articoli/2020/vegetariano-vegano/differenza-tra-vegano-e-vegetariano.ashx?h=800&iar=0&w=1920') center/cover no-repeat;
+            color: white;
+        }
 
+        #hero-background::before 
+        {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5); /* adjust opacity here */
+            z-index: 1;
+        }
+
+        /* Ensure content is above the overlay */
+        #hero-background > * 
+        {
+            position: relative;
+            z-index: 2;
+        }
     </style>
 </head>
-<body>
-    <nav class="navbar">
-        <div class="container d-flex justify-content-between align-items-center p-2">
-            <a href="index.html" class="navbar-brand d-flex align-items-center">
-                <b>Green Table</b>
-            </a>
-            <div class="d-flex align-items-center">
-                <ul class="nav me-3">
-                    <li class="nav-item">
-                        <a href="methods.html" class="nav-link text-secondary">Methods</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="sources.html" class="nav-link text-secondary">Sources</a>
-                    </li>
-                </ul>
-                <a href="order.html">
-                    <button class="btn btn-primary">Order Now</button>
-                </a>    
+<body class="bg-light">
+    <div class="container-fluid hero px-0" id="hero-background">
+        <div class="container">
+            <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+              <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+                <span class="fs-4 text-white">The Greenery</span>
+              </a>
+              <ul class="nav nav-pills">
+                <li class="nav-item"><a href="order.html" class="nav-link active" aria-current="page" style="margin-right: 10px;">Order</a></li>
+                <li class="nav-item"><a href="menu.html" class="nav-link text-white">Menu</a></li>
+                <li class="nav-item"><a href="contact.html" class="nav-link text-white">Contact</a></li>
+                <li class="nav-item"><a href="process.html" class="nav-link text-white">Process</a></li>
+                <li class="nav-item"><a href="sources.html" class="nav-link text-white">Sources</a></li>
+              </ul>
+            </header>
+        </div>
+        <div class="px-4 py-5 my-5 text-center">
+            <h1 class="display-5 fw-bold text-white">The Greenery</h1>
+            <div class="col-lg-6 mx-auto">
+              <p class="lead mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae perferendis impedit optio, maxime suscipit quis illo quia consequatur? Hic nemo officiis quod laborum, fugit quos.</p>
+              <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                <a href="order.html"><button type="button" class="btn btn-primary btn-lg px-4 gap-3">Order</button></a>
+                <a href="menu.html"><button type="button" class="btn btn-outline-light btn-lg px-4">View Menu</button></a>
+              </div>
             </div>
         </div>
-    </nav>
-    <main>
-        <div class="px-4 text-center" style="padding-top: 96px; padding-bottom: 96px;" id="hero">
-            <div class="hero-content">
-                <h1 class="display-2 fw-bold text-body-emphasis">Green Table</h1>
-                <div class="col-lg-6 mx-auto">
-                  <p class="lead mb-4">Here at Green Table, you'll find industry leading vegan food that is carefully sourced in coordination with various local farms, producers, and chefs. Join us in our mission to transition the world to more cleaner and sustainable food, away from traditional meat. In case you are not satisfied, we offer a full money-back guarantee.</p>
-                  <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                    <a href="order.html"><button type="button" class="btn btn-primary btn-lg px-4 gap-3">Order Now</button></a>
-                    <a href="methods.html"><button type="button" class="btn btn-outline-secondary btn-lg px-4">Methods</button></a>
-                  </div>
-                </div>
-            </div>
-          </div>
-    </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    </div>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </body>
 </html>
