--- a/index.html
+++ b/index.html
@@ -1,66 +1,334 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Greenery - Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
     <style>
-        #hero-background 
-        {
-            position: relative;
-            background: url('https://www.oliocarli.us/-/media/ita/hub_editoriale/articoli/2020/vegetariano-vegano/differenza-tra-vegano-e-vegetariano.ashx?h=800&iar=0&w=1920') center/cover no-repeat;
-            color: white;
-        }
+      #hero-background {
+        position: relative;
+        background: url("https://www.oliocarli.us/-/media/ita/hub_editoriale/articoli/2020/vegetariano-vegano/differenza-tra-vegano-e-vegetariano.ashx?h=800&iar=0&w=1920")
+          center/cover no-repeat;
+        color: white;
+      }
 
-        #hero-background::before 
-        {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.5); /* adjust opacity here */
-            z-index: 1;
-        }
+      #hero-background::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5); /* adjust opacity here */
+        z-index: 1;
+      }
 
-        /* Ensure content is above the overlay */
-        #hero-background > * 
-        {
-            position: relative;
-            z-index: 2;
-        }
+      /* Ensure content is above the overlay */
+      #hero-background > * {
+        position: relative;
+        z-index: 2;
+      }
     </style>
-</head>
-<body class="bg-light">
+  </head>
+  <body class="bg-light">
     <div class="container-fluid hero px-0" id="hero-background">
-        <div class="container">
-            <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-              <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-                <span class="fs-4 text-white">The Greenery</span>
-              </a>
-              <ul class="nav nav-pills">
-                <li class="nav-item"><a href="order.html" class="nav-link active" aria-current="page" style="margin-right: 10px;">Order</a></li>
-                <li class="nav-item"><a href="menu.html" class="nav-link text-white">Menu</a></li>
-                <li class="nav-item"><a href="contact.html" class="nav-link text-white">Contact</a></li>
-                <li class="nav-item"><a href="process.html" class="nav-link text-white">Process</a></li>
-                <li class="nav-item"><a href="sources.html" class="nav-link text-white">Sources</a></li>
-              </ul>
-            </header>
+      <div class="container">
+        <header
+          class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"
+        >
+          <a
+            href="index.html"
+            class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
+          >
+            <span class="fs-4 text-white">The Greenery</span>
+          </a>
+          <ul class="nav nav-pills">
+            <li class="nav-item">
+              <a
+                href="order.html"
+                class="nav-link active bg-success"
+                aria-current="page"
+                style="margin-right: 10px"
+                >Order</a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="menu.html" class="nav-link text-white">Menu</a>
+            </li>
+            <li class="nav-item">
+              <a href="contact.html" class="nav-link text-white">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a href="process.html" class="nav-link text-white">Process</a>
+            </li>
+            <li class="nav-item">
+              <a href="sources.html" class="nav-link text-white">References</a>
+            </li>
+          </ul>
+        </header>
+      </div>
+      <div class="px-4 pt-5 my-5 text-center" style="padding-bottom: 100px;">
+        <h1 class="display-5 fw-bold text-white">The Greenery</h1>
+        <div class="col-lg-6 mx-auto">
+          <p class="lead mb-4">
+            Welcome to The Greenery, the largest Vegan-friendly restaurant in Central PA. Here,
+            you'll find everything to meet your dietary needs, from buddha bowls filled with juicy
+            vegetables to chocolate mousse that is sure to leave a sweet taste in your mouth! We do all
+            of this while ensuring our committment to sustainability.
+          </p>
+          <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+            <a href="order.html"
+              ><button type="button" class="btn btn-success btn-lg px-4 gap-3">
+                Order
+              </button></a
+            >
+            <a href="menu.html"
+              ><button type="button" class="btn btn-outline-light btn-lg px-4">
+                View Menu
+              </button></a
+            >
+          </div>
         </div>
-        <div class="px-4 py-5 my-5 text-center">
-            <h1 class="display-5 fw-bold text-white">The Greenery</h1>
-            <div class="col-lg-6 mx-auto">
-              <p class="lead mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae perferendis impedit optio, maxime suscipit quis illo quia consequatur? Hic nemo officiis quod laborum, fugit quos.</p>
-              <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <a href="order.html"><button type="button" class="btn btn-primary btn-lg px-4 gap-3">Order</button></a>
-                <a href="menu.html"><button type="button" class="btn btn-outline-light btn-lg px-4">View Menu</button></a>
+      </div>
+    </div>
+    <div class="container my-5">
+      <section id="food-carousel" class="my-5">
+        <div
+          id="carouselExampleCaptions"
+          class="carousel slide shadow rounded"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
+          </div>
+          <div class="carousel-inner rounded">
+            <div class="carousel-item active">
+              <img
+                src="media/Salad-Bowl-7-1.jpg"
+                class="d-block w-100"
+                alt="Featured Dish 1"
+                style="max-height: 450px; object-fit: cover"
+              />
+              <div
+                class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 p-3 rounded"
+              >
+                <h5>Vibrant Buddha Bowls</h5>
+                <p>Packed with fresh veggies, protein, and flavor.</p>
               </div>
             </div>
+            <div class="carousel-item">
+              <img
+                src="media/beyond-burger-nutrition-and-ingredients-1569351590.jpg"
+                class="d-block w-100"
+                alt="Featured Dish 2"
+                style="max-height: 450px; object-fit: cover"
+              />
+              <div
+                class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 p-3 rounded"
+              >
+                <h5>Gourmet Beyond Burgers</h5>
+                <p>Juicy, satisfying, and completely plant-based.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="media/vegetarian-friendly-restaurants.jpeg"
+                class="d-block w-100"
+                alt="Restaurant Ambiance"
+                style="max-height: 450px; object-fit: cover"
+              />
+              <div
+                class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 p-3 rounded"
+              >
+                <h5>Cozy & Welcoming Atmosphere</h5>
+                <p>Enjoy your meal in our relaxed dining space.</p>
+              </div>
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
-    </div>
+      </section>
+      <div class="row text-center mt-5">
+        <div class="col-md-4 mb-4">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body">
+              <i class="bi bi-egg-fried fs-1 text-success mb-3"></i>
+              <!-- Example icon -->
+              <h5 class="card-title">100% Vegan</h5>
+              <p class="card-text">
+                Everything on our menu is completely plant-based. No
+                compromises, just pure flavor.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body">
+              <i class="bi bi-recycle fs-1 text-success mb-3"></i>
+              <h5 class="card-title">Sustainable Practices</h5>
+              <p class="card-text">
+                We are committed to reducing our environmental impact.
+                <a href="process.html">Learn More</a>.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body">
+              <i class="bi bi-geo-alt-fill fs-1 text-success mb-3"></i>
+              <h5 class="card-title">Locally Sourced</h5>
+              <p class="card-text">
+                Supporting local farmers and bringing you the freshest seasonal
+                ingredients possible.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <section class="my-4 p-5 bg-light rounded shadow-lg">
+        <div class="row align-items-center">
+            <div class="col-md-8">
+                <h2 class="text-success mb-3">Dish of the Week: Spicy Peanut Noodles</h2>
+                <p class="lead">Indulge in our perfectly cooked noodles tossed in a creamy, spicy peanut sauce with crispy tofu, broccoli florets, and a sprinkle of sesame seeds. A customer favorite!</p>
+                <p>Available for a limited time. Try it today!</p>
+                <a href="menu.html" class="btn btn-outline-success">See Full Menu</a>
+            </div>
+            <div class="col-md-4">
+                <img src="media/Peanut-Noodles.jpg" alt="Spicy Peanut Noodles" class="img-fluid rounded shadow">
+            </div>
+        </div>
+      </section>
+      <section id="testimonials" class="my-5">
+        <h2 class="text-center mb-4">What Our Customers Say</h2>
+        <div class="row">
+            <div class="col-md-4 mb-4">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body">
+                        <blockquote class="blockquote mb-0">
+                            <p><i class="bi bi-quote"></i> The best vegan food I've had in town! Fresh ingredients and amazing flavors. The Buddha Bowl is a must-try.</p>
+                            <footer class="blockquote-footer mt-2">Sarah K.</footer>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body">
+                         <blockquote class="blockquote mb-0">
+                             <p><i class="bi bi-quote"></i> I'm not even vegan, but I love this place. The Beyond Burger is incredible. Great atmosphere too!</p>
+                            <footer class="blockquote-footer mt-2">Mike P.</footer>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card h-100 shadow-sm">
+                     <div class="card-body">
+                         <blockquote class="blockquote mb-0">
+                             <p><i class="bi bi-quote"></i> So happy to have a restaurant committed to sustainability AND delicious food. Their composting program is fantastic.</p>
+                            <footer class="blockquote-footer mt-2">Chloe T.</footer>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
-</body>
+    <!-- === NEW: Location & Hours Snippet === -->
+    <section class="mb-5 text-center">
+         <h2 class="mb-3">Visit Us</h2>
+         <p><i class="bi bi-geo-alt-fill me-1 text-success"></i> 123 Plantain Place, Vegville, VG 54321</p>
+         <p><i class="bi bi-clock-fill me-1 text-success"></i> Open Daily: 11:00 AM - 9:00 PM (Weekends vary)</p>
+         <a href="contact.html" class="btn btn-secondary">Get Directions & Full Hours</a>
+     </section>
+    </div>
+    <footer class="bg-light text-center text-lg-start mt-auto">
+      <div class="container p-4">
+        <div class="row">
+          <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+            <h5 class="text-uppercase">The Greenery</h5>
+            <p>
+              Deliciously compassionate food. Locally sourced, thoughtfully
+              prepared.
+            </p>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Links</h5>
+            <ul class="list-unstyled mb-0">
+              <li><a href="menu.html" class="text-dark">Menu</a></li>
+              <li><a href="process.html" class="text-dark">Our Impact</a></li>
+              <li><a href="contact.html" class="text-dark">Contact Us</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Follow Us</h5>
+            <a href="#" class="text-dark me-2"
+              ><i class="bi bi-facebook"></i
+            ></a>
+            <a href="#" class="text-dark me-2"
+              ><i class="bi bi-instagram"></i
+            ></a>
+            <a href="#" class="text-dark"><i class="bi bi-twitter-x"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.1)">
+        © 2025 The Greenery -
+        <a class="text-dark" href="sources.html">References</a> | Team 2009-902
+      </div>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
