--- a/template.html
+++ b/template.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Greenery - Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
         
     </style>
@@ -16,14 +17,49 @@
             <span class="fs-4">The Greenery</span>
           </a>
           <ul class="nav nav-pills">
-            <li class="nav-item"><a href="order.html" class="nav-link active" aria-current="page" style="margin-right: 10px;">Order</a></li>
-            <li class="nav-item"><a href="menu.html" class="nav-link">Menu</a></li>
-            <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-            <li class="nav-item"><a href="process.html" class="nav-link">Process</a></li>
-            <li class="nav-item"><a href="sources.html" class="nav-link">Sources</a></li>
+            <li class="nav-item"><a href="order.html" class="nav-link active bg-success" aria-current="page" style="margin-right: 10px;">Order</a></li>
+            <li class="nav-item"><a href="menu.html" class="nav-link text-dark">Menu</a></li>
+            <li class="nav-item"><a href="contact.html" class="nav-link text-dark">Contact</a></li>
+            <li class="nav-item"><a href="process.html" class="nav-link text-dark">Process</a></li>
+            <li class="nav-item"><a href="sources.html" class="nav-link text-dark">References</a></li>
           </ul>
         </header>
     </div>
+    <footer class="bg-light text-center text-lg-start mt-auto">
+      <div class="container p-4">
+        <div class="row">
+          <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+            <h5 class="text-uppercase">The Greenery</h5>
+            <p>
+              Deliciously compassionate food. Locally sourced, thoughtfully
+              prepared.
+            </p>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Links</h5>
+            <ul class="list-unstyled mb-0">
+              <li><a href="menu.html" class="text-dark">Menu</a></li>
+              <li><a href="process.html" class="text-dark">Our Impact</a></li>
+              <li><a href="contact.html" class="text-dark">Contact Us</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Follow Us</h5>
+            <a href="#" class="text-dark me-2"
+              ><i class="bi bi-facebook"></i
+            ></a>
+            <a href="#" class="text-dark me-2"
+              ><i class="bi bi-instagram"></i
+            ></a>
+            <a href="#" class="text-dark"><i class="bi bi-twitter-x"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.1)">
+        © 2025 The Greenery -
+        <a class="text-dark" href="sources.html">References</a> | Team 2009-902
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </body>
 </html>
