--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/5077/5077571.png" type="image/x-icon">
     <style>
       #hero-background {
         position: relative;
