--- a/contact.html
+++ b/contact.html
@@ -26,12 +26,13 @@
       <header
         class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"
       >
-        <a
-          href="index.html"
-          class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
-        >
-          <span class="fs-4">The Greenery</span>
-        </a>
+      <a
+      href="index.html"
+      class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none navbar-brand"
+    >
+      <img src="https://cdn-icons-png.flaticon.com/512/5077/5077571.png" alt="Logo" width="30" height="24" class="d-inline-block mx-2 mt-2 align-text-top">
+      <span class="fs-4">The Greenery</span>
+    </a>
         <ul class="nav nav-pills">
           <li class="nav-item">
             <a href="order.html" class="nav-link text-dark">Order</a>
@@ -64,10 +65,7 @@
     </div>
     <main class="container my-5">
       <h1 class="text-center mb-4">Contact Us</h1>
-      <p class="text-center lead mb-5">
-        We'd love to hear from you! Reach out with questions, feedback,
-        reservation inquiries, or just to say hello.
-      </p>
+      <p class="text-center lead mb-5">We'd love to hear from you! Reach out with questions, feedback, reservation inquiries, <strong class="text-success">catering requests,</strong> or just to say hello.</p>
 
       <div class="row g-4">
         <!-- Added gutter spacing -->
@@ -156,6 +154,7 @@
           <div class="p-4 bg-light rounded shadow-sm h-100">
             <!-- Added padding and background -->
             <h2 class="text-success mb-3">Send Us a Message</h2>
+            <p class="small text-muted">Use this form for general inquiries, feedback, or rewards program questions. For catering, please provide event details below.</p>
             <form id="mockContactForm">
               <div class="mb-3">
                 <label for="contactName" class="form-label"
@@ -341,41 +340,69 @@
         </div>
       </div>
     </main>
-    <footer class="bg-light text-center text-lg-start mt-auto">
+    <footer class="bg-light text-center text-lg-start mt-auto border-top">
       <div class="container p-4">
-        <div class="row">
-          <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-            <h5 class="text-uppercase">The Greenery</h5>
-            <p>
-              Deliciously compassionate food. Locally sourced, thoughtfully
-              prepared.
-            </p>
+          <div class="row">
+              <!-- Column 1: Restaurant Name -->
+              <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
+                  <h5 class="text-uppercase">The Greenery</h5>
+                  <p>
+                      Deliciously compassionate food. Locally sourced, thoughtfully prepared right here in Vegville.
+                  </p>
+                  <a href="#rewards-section" class="btn btn-sm btn-success">Join Our Rewards!</a> <!-- Link to homepage section -->
+              </div>
+
+              <!-- Column 2: Quick Links -->
+              <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
+                  <h5 class="text-uppercase">Quick Links</h5>
+                  <ul class="list-unstyled mb-0">
+                      <li><a href="menu.html" class="text-dark">Menu</a></li>
+                      <li><a href="order.html" class="text-dark">Order Online</a></li>
+                      <li><a href="process.html" class="text-dark">Our Impact</a></li>
+                      <li><a href="contact.html" class="text-dark">Contact Us</a></li>
+                  </ul>
+              </div>
+
+              <!-- === NEW Column 3: Order Delivery === -->
+              <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                  <h5 class="text-uppercase">Order Delivery</h5>
+                  <p class="small">Get your favorites delivered:</p>
+                   <!-- Replace # with actual partner links -->
+                  <div class="mb-2">
+                    <i class="bi bi-truck me-1"></i> 
+                      <a href="order.html" target="_blank" rel="noopener noreferrer" class="text-dark me-2">
+                         DoorDash
+                      </a>
+                  </div>
+                   <div class="mb-2">
+                    <i class="bi bi-bag-check-fill me-1"></i> 
+                      <a href="order.html" target="_blank" rel="noopener noreferrer" class="text-dark me-2">
+                         Uber Eats
+                       </a>
+                   </div>
+                  <div>
+                    <i class="bi bi-box-seam me-1"></i> 
+                      <a href="order.html" target="_blank" rel="noopener noreferrer" class="text-dark me-2">
+                         Grubhub
+                      </a>
+                  </div>
+              </div>
+
+              <!-- Column 4: Follow Us -->
+              <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                  <h5 class="text-uppercase">Follow Us</h5>
+                  <!-- Replace # with actual social links -->
+                  <a href="#" class="text-dark me-2" title="Facebook"><i class="bi bi-facebook fs-4"></i></a>
+                  <a href="#" class="text-dark me-2" title="Instagram"><i class="bi bi-instagram fs-4"></i></a>
+                  <a href="#" class="text-dark" title="Twitter/X"><i class="bi bi-twitter-x fs-4"></i></a>
+              </div>
           </div>
-          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-            <h5 class="text-uppercase">Links</h5>
-            <ul class="list-unstyled mb-0">
-              <li><a href="menu.html" class="text-dark">Menu</a></li>
-              <li><a href="process.html" class="text-dark">Our Impact</a></li>
-              <li><a href="contact.html" class="text-dark">Contact Us</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-            <h5 class="text-uppercase">Follow Us</h5>
-            <a href="#" class="text-dark me-2"
-              ><i class="bi bi-facebook"></i
-            ></a>
-            <a href="#" class="text-dark me-2"
-              ><i class="bi bi-instagram"></i
-            ></a>
-            <a href="#" class="text-dark"><i class="bi bi-twitter-x"></i></a>
-          </div>
-        </div>
       </div>
-      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.1)">
-        © 2025 The Greenery -
-        <a class="text-dark" href="sources.html">References</a> | Team 2009-902
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+          © 2025 The Greenery -
+          <a class="text-dark" href="sources.html">References</a>
       </div>
-    </footer>
+  </footer>
     <script src="script.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
