--- a/menu.html
+++ b/menu.html
@@ -26,12 +26,13 @@
       <header
         class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"
       >
-        <a
-          href="index.html"
-          class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
-        >
-          <span class="fs-4">The Greenery</span>
-        </a>
+      <a
+      href="index.html"
+      class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none navbar-brand"
+    >
+      <img src="https://cdn-icons-png.flaticon.com/512/5077/5077571.png" alt="Logo" width="30" height="24" class="d-inline-block mx-2 mt-2 align-text-top">
+      <span class="fs-4">The Greenery</span>
+    </a>
         <ul class="nav nav-pills">
           <li class="nav-item">
             <a
@@ -91,6 +92,13 @@
           Soon)</a
         >
       </div>
+
+      <div class="alert alert-success text-center" role="alert">
+        <h4 class="alert-heading"><i class="bi bi-people-fill me-2"></i>Planning an Event or Need a Quick Meal?</h4>
+        <p>We offer catering services for gatherings big and small! Check out our popular Combo Meals below for great value deals.</p>
+        <hr>
+        <p class="mb-0">For catering inquiries, please visit our <a href="contact.html" class="alert-link">Contact Page</a> or email us at catering@thegreenery.com</p>
+    </div>
 
       <!-- Tab Navigation for Categories -->
       <ul
@@ -391,6 +399,40 @@
               </div>
             </div>
           </div>
+          <h3 class="mt-5 mb-3 text-success border-top pt-3">Combo Meals</h3>
+                 <div class="row row-cols-1 row-cols-md-2 g-4"> <!-- Use 2 columns for combos -->
+                    <div class="col">
+                        <div class="card h-100 shadow-sm">
+                          <img
+                  src="media/burger--fries.jpg"
+                  class="card-img-top"
+                  alt="Spicy Peanut Noodles"
+                  style="height: 200px; object-fit: cover"
+                />
+                           <div class="card-body d-flex flex-column">
+                               <h5 class="card-title">Burger Combo</h5>
+                               <p class="card-text">Beyond Burger Deluxe (w/ Fries) + Choice of Soft Drink or Iced Tea.</p>
+                               <p class="card-text fw-bold mt-auto">$19.00 <span class="text-muted small">(Save $1.00)</span></p>
+                           </div>
+                       </div>
+                   </div>
+                    <div class="col">
+                        <div class="card h-100 shadow-sm">
+                          <img
+                  src="media/rice-paper-rolls-1-2.jpg"
+                  class="card-img-top"
+                  alt="Spicy Peanut Noodles"
+                  style="height: 200px; object-fit: cover"
+                />
+                           <div class="card-body d-flex flex-column">
+                               <h5 class="card-title">Bowl & Bites Combo</h5>
+                               <p class="card-text">Buddha Bowl + Crispy Spring Rolls Appetizer.</p>
+                               <p class="card-text fw-bold mt-auto">$22.00 <span class="text-muted small">(Save $2.00)</span></p>
+                           </div>
+                       </div>
+                   </div>
+                     <!-- Add more combo cards if needed -->
+                </div>
         </div>
 
         <!-- Desserts Panel -->
@@ -586,41 +628,69 @@
         </div>
       </div>
     </main>
-    <footer class="bg-light text-center text-lg-start mt-auto">
+    <footer class="bg-light text-center text-lg-start mt-auto border-top">
       <div class="container p-4">
-        <div class="row">
-          <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-            <h5 class="text-uppercase">The Greenery</h5>
-            <p>
-              Deliciously compassionate food. Locally sourced, thoughtfully
-              prepared.
-            </p>
+          <div class="row">
+              <!-- Column 1: Restaurant Name -->
+              <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
+                  <h5 class="text-uppercase">The Greenery</h5>
+                  <p>
+                      Deliciously compassionate food. Locally sourced, thoughtfully prepared right here in Vegville.
+                  </p>
+                  <a href="#rewards-section" class="btn btn-sm btn-success">Join Our Rewards!</a> <!-- Link to homepage section -->
+              </div>
+
+              <!-- Column 2: Quick Links -->
+              <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
+                  <h5 class="text-uppercase">Quick Links</h5>
+                  <ul class="list-unstyled mb-0">
+                      <li><a href="menu.html" class="text-dark">Menu</a></li>
+                      <li><a href="order.html" class="text-dark">Order Online</a></li>
+                      <li><a href="process.html" class="text-dark">Our Impact</a></li>
+                      <li><a href="contact.html" class="text-dark">Contact Us</a></li>
+                  </ul>
+              </div>
+
+              <!-- === NEW Column 3: Order Delivery === -->
+              <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                  <h5 class="text-uppercase">Order Delivery</h5>
+                  <p class="small">Get your favorites delivered:</p>
+                   <!-- Replace # with actual partner links -->
+                  <div class="mb-2">
+                    <i class="bi bi-truck me-1"></i> 
+                      <a href="order.html" target="_blank" rel="noopener noreferrer" class="text-dark me-2">
+                         DoorDash
+                      </a>
+                  </div>
+                   <div class="mb-2">
+                    <i class="bi bi-bag-check-fill me-1"></i> 
+                      <a href="order.html" target="_blank" rel="noopener noreferrer" class="text-dark me-2">
+                         Uber Eats
+                       </a>
+                   </div>
+                  <div>
+                    <i class="bi bi-box-seam me-1"></i> 
+                      <a href="order.html" target="_blank" rel="noopener noreferrer" class="text-dark me-2">
+                         Grubhub
+                      </a>
+                  </div>
+              </div>
+
+              <!-- Column 4: Follow Us -->
+              <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                  <h5 class="text-uppercase">Follow Us</h5>
+                  <!-- Replace # with actual social links -->
+                  <a href="#" class="text-dark me-2" title="Facebook"><i class="bi bi-facebook fs-4"></i></a>
+                  <a href="#" class="text-dark me-2" title="Instagram"><i class="bi bi-instagram fs-4"></i></a>
+                  <a href="#" class="text-dark" title="Twitter/X"><i class="bi bi-twitter-x fs-4"></i></a>
+              </div>
           </div>
-          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-            <h5 class="text-uppercase">Links</h5>
-            <ul class="list-unstyled mb-0">
-              <li><a href="menu.html" class="text-dark">Menu</a></li>
-              <li><a href="process.html" class="text-dark">Our Impact</a></li>
-              <li><a href="contact.html" class="text-dark">Contact Us</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-            <h5 class="text-uppercase">Follow Us</h5>
-            <a href="#" class="text-dark me-2"
-              ><i class="bi bi-facebook"></i
-            ></a>
-            <a href="#" class="text-dark me-2"
-              ><i class="bi bi-instagram"></i
-            ></a>
-            <a href="#" class="text-dark"><i class="bi bi-twitter-x"></i></a>
-          </div>
-        </div>
       </div>
-      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.1)">
-        © 2025 The Greenery -
-        <a class="text-dark" href="sources.html">References</a> | Team 2009-902
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+          © 2025 The Greenery -
+          <a class="text-dark" href="sources.html">References</a>
       </div>
-    </footer>
+  </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
